fix updateUserInfo api
