# middleware/validateTokenHandler.js
@@ -19,12 +19,6 @@ export const isAuthenticateUser = async (req, res, next) => {
     );
   }
 
-  const token = authHeader.split(' ')[1];
-
-  try {
-    req.token = token;
-    next();
-  } catch (error) {
-    next(error);
-  }
+  req.token = token;
+  next();
 };
