# modules/user/user.route.js
@@ -1,9 +1,5 @@
 import express from 'express';
-import {
-  loginUser,
-  registerUser,
-  updateUserGenderDob,
-} from './user.controller.js';
+import { loginUser, registerUser, updateUserInfo } from './user.controller.js';
 import { isAuthenticateUser } from '../../middleware/validateTokenHandler.js';
 import { verifyToken } from '../../middleware/verifyTokenHandler.js';
 const userRoute = express.Router();
@@ -12,6 +8,6 @@ userRoute.route('/register-user').post(registerUser);
 userRoute.route('/signin').post(isAuthenticateUser, loginUser);
 userRoute
   .route('/update-gender-dob')
-  .put(isAuthenticateUser, verifyToken, updateUserGenderDob);
+  .put(isAuthenticateUser, verifyToken, updateUserInfo);
 
 export default userRoute;
